--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@
     color: goldenrod;
   }
 
+  canvas {
+    background-color: rgb(32, 32, 32);
+    width: 10%;
+  }
   /***********************************/
 
 
